(lang dune 2.8)

(name ts-re-compiler)

(generate_opam_files true)

(license ISC)

(authors "Simon Wimmer")

(maintainers "swimmer@cs.au.dk")

(package
 (name ts-re-compiler)
 (synopsis "Working with the Typescript Ast in OCaml")
 (description
  "This project tries to setup interaction between the TypeScript, ReScript, and OCaml."))
